--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,3 +215,41 @@ input[type=submit] {
   background: #4aaaa5;
   border: 0 none;
 }
+
+@media screen and (max-width: 980px) {
+  .container {
+    width: 600px;
+    margin-left: 50px;
+  }
+}
+ 
+@media screen and (max-width: 768px)  {
+  .container {
+    width: 650px;
+  }
+   
+  .auth-image {
+    width: 350px;
+    height: 250px;
+  }
+}
+  
+@media screen and (max-width: 640px)  {
+  .container {
+    width: 500px;
+  }
+
+  .auth-image {
+    width: 400px;
+    height: 300px;
+  }
+
+  #logo {
+    width: 100%;
+    float: center;
+  }
+
+  nav {
+    margin-right: 150px;
+  }
+}
